Fixed bug where textboxes would appear behind colorpickers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@
   border-radius: 0 !important;
 }
 
-.remove, .colorpick, .monthsevent {
+.remove, .colorpick, .monthsevent .color-col{
   text-align: center;
 }
 
